[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/StartMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TransitionScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=4]

[node name="main" type="Node2D"]
script = ExtResource( 4 )

[node name="TransitionScreen" parent="." instance=ExtResource( 2 )]
layer = 0

[node name="StartMenu" parent="." instance=ExtResource( 1 )]

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
